--- a/.env
+++ b/.env
@@ -16,5 +16,19 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=bb836951bf9d27caeedd4973f038e651
+APP_SECRET=d533f69b766d1cd9e71cc2b1b603eeb6
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root@127.0.0.1:3306/tfg"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
+# Credenciales de la API de Edamam
+EDAMAM_API_KEY=4e1b7ae7b93a9531743412a735586015
+EDAMAM_APP_ID=1fa1656f
