--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,23 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/annotations": "^2.0",
+        "doctrine/doctrine-bundle": "^2.12",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^2.19",
+        "easycorp/easyadmin-bundle": "^4",
+        "guzzlehttp/guzzle": "*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
         "symfony/runtime": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.50"
     },
     "config": {
         "allow-plugins": {
