--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,15 +4,17 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    env(EDAMAM_API_KEY): '42be0b3897b62e87dc059775a1f742fd'
+    env(EDAMAM_APP_ID): '1707aa68'
 
 services:
-    # default configuration for services in *this* file
+    # Default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
+    # Makes classes in src/ available to be used as services
+    # This creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
@@ -20,5 +22,12 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # Add more service definitions when explicit configuration is needed
+    # Please note that last definitions always *replace* previous ones
+
+    # Service definition for EdamamFoodDatabaseApiService
+    App\Service\EdamamFoodDatabaseApiService:
+        arguments:
+            $client: '@http_client'
+            $baseUrl: 'https://api.edamam.com'
+            $apiKey: '%env(EDAMAM_API_KEY)%'
